# Gov-Encrypt

./: .gitignore  .wallets  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Devnet_Deployment_Checklist.md  Devnet_Testing_Checklist.md  LICENSE  README.md  SECURITY.md  deploy-devnet.sh  docker-compose.yml  package-lock.json  package.json  vercel.json
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
app/app/: layout.tsx  page.tsx
app/components/: CreateProposal.tsx  Vote.tsx
app/utils/: idl.json
backend/arcium-relayer/: Dockerfile  index.ts  package.json
circuits/: Cargo.toml  delegation.arcis  private_delegation.arcis  quorum.arcis  treasury_sim.arcis  vote_tally.arcis
circuits/src/: lib.rs
docker/: docker-compose.yml
docs/: architecture.md
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CreateProposal.tsx  Dashboard.tsx  Delegation.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Profile.tsx  ProposalCard.tsx  SolanaProvider.tsx  TreasurySimulation.tsx  Vote.tsx
frontend/hooks/: useProgram.ts
frontend/idl/: gov_encrypt.json
mxe-node/: .env.example  README.md  index.ts  package-lock.json  package.json
program/: Anchor.toml  Cargo.toml
program/programs/gov-encrypt/: Cargo.toml
program/programs/gov-encrypt/src/: lib.rs
program/src/: lib.rs
relayer/: index.js  package-lock.json  package.json  test.js
scripts/: deploy-devnet.sh
tests/: gov-encrypt.ts
(+37 files in other folders)
