[package]
name = "gov-encrypt"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gov_encrypt"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
arcis = { git = "https://github.com/arcium-hq/arcis" }
arcium-anchor = { git = "https://github.com/arcium-hq/arcium-anchor" }
